--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 m6">
-                    <h4 class="green-text text-darken-4">TESTIMONIAL 1</h4>
-                    <p class="green-text text-darken-3">Ipsum IpsumIpsumIpsumIpsumIpsumIpsumIpsumIpsum IpsumIpsum IpsumIpsumIpsumIpsum</p>
+                    <h4 class="green-text text-darken-4">FAST-GROWING TOUR COMPANY</h4>
+                    <p class="green-text text-darken-3">Traversify has provided us huge value in promoting our products across many different channels.
+                                                        Thanks to their network of contacts and professionalism, we have launched and sold new products in very little time and with great results.
+                                                <br><br>Without doubt I would recommend them to any operator in need.
+                                                <br><br><b>Pablo Alonso, CEO - Iberian Events</b>
                 </div>
                 <div class="col s12 m6">
                     <h4 class="green-text text-darken-4">MARKET LEADING TOUR PROVIDER</h4>
@@ -155,7 +158,7 @@
             <div class="col s4">
             </div>
             <div class="col s4">
-                <form method="POST">
+                <form method="POST" action="mail.php">
                     <label for="email" class="fun-label"></label>
                     <input name="email" class="fun-input" type="email" placeholder="worktogether@potentialpartner.com">
                     <button class="fun-button" type="submit">Tell Me More</button>
