cambios al texto sobre el precio

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="row">
                 <div class="col s12 m4 main-box">
                     <h5 class="white-text"> LOW <br> COST </h5>
-                    <p class="white-text">For a fixed monthly fee starting from €30/product we will optimise your products on up to 20 major distribution channels and multiple languages.<br><br>
+                    <p class="white-text">We will make a tailored tariff, either fixed, variable or a combination, depending on your preference and budget - we will optimise your products on up to 20 major distribution channels and multiple languages.<br><br>
                         In addition, we also provide reports and analysis on key market trends and help you build better products.</p>
                 </div>
                 <div class="col s12 m4 main-box">
