--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@
             <div class="col s4">
             </div>
             <div class="col s4">
-                <form method="POST" action="mail.php">
+                <form action="https://www.enformed.io/6odom1gm">
                     <label for="email" class="fun-label"></label>
                     <input name="email" class="fun-input" type="email" placeholder="worktogether@potentialpartner.com">
+                    <input type="hidden" name="*redirect" value="http://www.traversify.com" />
                     <button class="fun-button" type="submit">Tell Me More</button>
                 </form>
             </div>
