changed tour provider testimonials

--- a/index.html
+++ b/index.html
@@ -80,14 +80,7 @@
     <article class="white">
         <div class="container">
             <div class="row">
-                <div class="col s12 m6">
-                    <h4 class="green-text text-darken-4">FAST-GROWING TOUR COMPANY</h4>
-                    <p class="green-text text-darken-3">Traversify has provided us huge value in promoting our products across many different channels.
-                                                        Thanks to their network of contacts and professionalism, we have launched and sold new products in very little time and with great results.
-                                                <br><br>Without doubt I would recommend them to any operator in need.
-                                                <br><br><b>Pablo Alonso, CEO - Iberian Events</b>
-                </div>
-                <div class="col s12 m6">
+                <div class="col s12 m12 center">
                     <h4 class="green-text text-darken-4">MARKET LEADING TOUR PROVIDER</h4>
                     <p  class="green-text text-darken-3">Since our first contact with Traversify, they have been a huge source of good advice, solutions and industry leading knowledge.
                         <br><br>Thanks to Traversify we have reached levels of growth and customer satisfaction that have <b>exceeded our expectations by miles.</b>
